labs/lab 1/cat-bank-stage1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cat-bank-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cat-bank
  template:
    metadata:
      labels:
        app: cat-bank
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: web-content
        configMap:
          name: cat-bank-config
