labs/lab 1/cat-bank-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cat-bank-service
spec:
  type: ClusterIP
  selector:
    app: cat-bank
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
