labs/lab 1/mock.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiremock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiremock
  template:
    metadata:
      labels:
        app: wiremock
    spec:
      containers:
      - name: wiremock
        image: wiremock/wiremock:3.13.1
        ports:
        - containerPort: 8080

        volumeMounts:
        - name: mappings
          mountPath: /home/wiremock/mappings

      volumes:
      - name: mappings
        configMap:
          name: wiremock-config
---
apiVersion: v1
kind: Service
metadata:
  name: wiremock-service
spec:
  selector:
    app: wiremock
  ports:
  - port: 8080
    targetPort: 8080
